| Bug #971 | ORDER BY DESC doesn't return correct num of rows with BDB and an indexed column | ||
|---|---|---|---|
| Submitted: | 31 Jul 2003 16:44 | Modified: | 2 Sep 2003 23:33 |
| Reporter: | Deepak Giridharagopal | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 4.0.13, 4.0.14 | OS: | Linux (Linux, Solaris) |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
[31 Jul 2003 16:44]
Deepak Giridharagopal
[1 Aug 2003 4:15]
Alexander Keremidarski
Thank you for this excelent test case.
[1 Aug 2003 4:15]
Alexander Keremidarski
Thank you for this excelent test case.
[2 Sep 2003 23:33]
Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
[30 Oct 2003 19:11]
Sonny Davis
I ran into the same type of problem in version 4.0.13. A table containing log entries was being sorted DESC by [ENTRYDATE] and then by [LOGID]. [LOGID] was the primary key, and [ENTRYDATE] wasn't indexed. The result was that users were successfully entering logs, but they didn't show up in the history, which displays the most recently entered logs first. But on another report that shows the logs in order of entry, they were all there. Creating an index on [ENTRYDATE] fixed the problem, but we were baffled as to why it was necessary.
