Fix for the bug #971: ORDER BY DESC doesn't return correct num of rows with BDB and an indexed column.